# rubin-lfs-migrator

./: README.md  pyproject.toml  tox.ini  wrapper.sh
assets/: lfsrepos.txt  progress.txt
requirements/: dev.in  dev.txt  main.txt
src/rubin_lfs_migrator/: __init__.py  external.py  loop_copier.py  loop_harness.py  loop_oid_mapper.py  looper.py  migrator.py  obj_copier.py  oid_mapper.py  parser.py  util.py
tests/: conftest.py  object_test.py  trivial_test.py
